--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=programmable_air
-version=1.1.5
+version=1.1.6
 author=tinkrmind
-maintainer=tinkrmind <hello@programmable-air.com>
+maintainer=tinkrmind <tinkrmind@gmail.com>
 sentence=Basic functions to control the Programmable-Air board.
 paragraph=For example, controlling the speed of pumps, reading pressure, toggling the valves and such.
 category=Device Control
